@@ -1,5 +1,5 @@
 [tox]
-envlist=py25,py26,py27,py31,py32,py33,pypy,du11,du10,du09,du08,du07
+envlist=py26,py27,py31,py32,py33,pypy,du11,du10,du09,du08,du07
 
 [testenv]
 deps=
@@ -11,14 +11,6 @@ setenv =
 commands=
     {envpython} tests/run.py {posargs}
     sphinx-build -W -b html -d {envtmpdir}/doctrees doc {envtmpdir}/html
-
-[testenv:py25]
-deps=
-    simplejson==2.5.0
-    {[testenv]deps}
-setenv=
-    PIP_INSECURE = 1
-    {[testenv]setenv}
 
 [testenv:py33]
 deps=
