@@ -1,6 +1,12 @@
 Release 1.3 (in development)
 ============================
 
+Change support versions
+-----------------------
+
+* Drop Python-2.5. (support code was completely removed)
+
+
 
 Release 1.2 (released Dec 10, 2013)
 ===================================
